Experiencia + CSS / Proyecto Next_U

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -40,6 +40,15 @@ footer {
 }
 
 /***********************************************
+*************** EXPERIENCIA ********************
+***********************************************/
+
+.audio {
+    margin-top: 20px;
+    margin-bottom: 20PX; 
+}
+
+/***********************************************
 ***************** FOOTER ***********************
 ***********************************************/
 
